--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".views.activities.SignUpActivity"></activity>
+        <activity android:name=".views.activities.CuisineDishActivity" />
+        <activity android:name=".views.activities.MainActivity"></activity>
     </application>
 
 </manifest>
