--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "25.0.1"
     defaultConfig {
         applicationId "com.farcita.www.farcita"
-        minSdkVersion 24
+        minSdkVersion 23
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -25,5 +25,11 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.1.0'
+    compile 'com.android.support:design:25.1.0'
+    compile 'com.jakewharton:butterknife:6.1.0'
+    compile 'com.hbb20:ccp:1.7.1'
+    compile 'com.googlecode.libphonenumber:libphonenumber:7.1.1'
+    compile 'com.wdullaer:materialdatetimepicker:3.1.0'
     testCompile 'junit:junit:4.12'
+
 }
